# instructor

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  Taskfile.yml  alembic.ini  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: b2cb213e6652_initial_schema.py
curriculum/greek/: alphabet.yml
curriculum/greek/grammar/: sequence.yml
curriculum/greek/vocabulary/: core-001-basic.yml  core-002-common.yml
curriculum/latin/grammar/: sequence.yml
curriculum/latin/vocabulary/: core-001-basic.yml  core-002-common.yml  theme-family.yml
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx
frontend/src/__tests__/: App.test.tsx  DashboardPage.test.tsx  LandingPage.test.tsx  LearnerContext.test.tsx  PlacementTest.test.tsx  PracticeSession.test.tsx  ProgressPage.test.tsx  RegisterPage.test.tsx
frontend/src/api/: client.ts  curriculum.ts  index.ts  learners.ts  placement.ts  sessions.ts  types.ts
frontend/src/components/: AppLayout.tsx  ExerciseCard.tsx  FeedbackCard.tsx  ProtectedRoute.tsx
frontend/src/context/: LearnerContext.tsx  learner-context.ts
frontend/src/hooks/: useLearner.ts
frontend/src/pages/: DashboardPage.tsx  LandingPage.tsx  PlacementTestPage.tsx  PracticeSessionPage.tsx  ProgressPage.tsx  RegisterPage.tsx
src/instructor/: config.py  db.py  log_config.py  main.py
src/instructor/ai/: client.py  evaluator.py  prompts.py
src/instructor/api/: curriculum.py  learner.py  placement.py  schemas.py  session.py
src/instructor/curriculum/: loader.py  registry.py  schemas.py
src/instructor/evaluator/: placement.py  scoring.py
src/tests/: conftest.py
(+107 files in other folders)
